--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,5 @@
 html {
-    background-color: #E4E9FD;
-    background-image: -webkit-linear-gradient(45deg, #A683E3 50%, #E4E9FD 50%);
+    background-color: #4a578b;
     min-height: 1000px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -11,24 +10,30 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+h2 {
+    color: #000;
+    text-align: center;
+}
+
 .box {
+    text-align: center;
     max-width: 400px;
     margin: 50px auto;
     background: white;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
 #heading {
-    background-color: #A683E3;
+    background-color: #3d2c88;
     text-align: center;
+    margin: auto;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .item {
     min-height: 70px;
     display: flex;
-    align-items: center;
     border-bottom: 1px solid #F1F1F1;
 }
 
@@ -41,45 +46,77 @@ input:checked+p {
     text-decoration-color: #A683E3;
 }
 
-input[type="checkbox"] {
-    margin: 20px;
-}
-
 p {
-    margin: 0;
-    padding: 20px;
-    font-size: 20px;
+    margin: 10px;
+    padding: 5px;
+    font-size: 25px;
     font-weight: 200;
     color: #00204a;
 }
 
-form {
-    text-align: center;
-    margin-left: 20px;
-    font-family: 'helvetica neue';
+
+/* FORM CSS */
+
+.add-new-contact {
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    height: 300px;
+    width: 1000px;
+    background-color: #fff;
 }
 
-button {
-    min-height: 50px;
-    width: 50px;
+form {
+    width: 90%;
+    text-align: center;
+    margin: auto;
+    font-family: 'helvetica neue';
+    box-sizing: border-box;
+}
+
+#delete {
+    min-height: 25px;
+    width: 25px;
     border-radius: 50%;
     border-color: transparent;
-    background-color: #A683E3;
+    background-color: #3d2c88;
     color: #fff;
-    font-size: 30px;
-    padding-bottom: 6px;
+    font-size: 15px;
     border-width: 0;
 }
 
-input[type="text"] {
-    text-align: center;
-    height: 60px;
-    top: 10px;
-    border: none;
-    background: transparent;
-    font-size: 20px;
-    font-weight: 200;
-    width: 313px;
+#edit {
+    min-height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    border-color: transparent;
+    background-color: #3d2c88;
+    color: #fff;
+    font-size: 15px;
+    border-width: 0;
+}
+
+#add {
+    height: 50px;
+    width: 50px;
+    border-color: transparent;
+    background-color: #3d2c88;
+    color: #fff;
+    font-size: 30px;
+    border-width: 0;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="tel"],
+input[type="file"] {
+    width: 380px;
+    display: inline-block;
+    padding: 12px 20px;
+    margin: 8px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 input[type="text"]:focus {
@@ -97,4 +134,54 @@ footer {
     color: white;
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
+}
+
+
+/* CARD STYLE CSS*/
+
+.contact-details {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px auto;
+    clear: both;
+    height: 1000px;
+    width: 90%;
+}
+
+.card {
+    transition: 0.3s;
+    width: 250px;
+    padding: 15px;
+    margin: 5px;
+    height: 150px;
+    float: left;
+}
+
+.container:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+    padding: 2px 16px;
+    /* border: 1px solid black; */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+img {
+    height: 50px;
+    width: 50px;
+}
+
+
+/* FOOTER CSS */
+
+#footer {
+    float: none;
+    clear: both;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    color: #fff;
+    padding: 50px;
 }
